Fix: removed z-index attribute for tech-icons

--- a/frontend/src/components/common/tech-icon/TechIcon.scss
+++ b/frontend/src/components/common/tech-icon/TechIcon.scss
@@ -24,14 +24,13 @@
             bottom: 110%;
             transition: 0.2s ease-in-out;
             font-size: 1rem;
-            z-index: 9999;
+            z-index: 1;
         }
 
         .icon{
             width: 70%;
             height: 70%;
             color: var(--primary-color);
-            z-index: 1;
         }
 
         &:hover{
